Wed Feb 16 10:13:41 2005  Steve Huston  <shuston@riverace.com>

	* examples/Reactor/Proactor/post_completions.cpp:
	* examples/Reactor/Proactor/test_proactor.cpp: Adjust the overridden
	  result class and internal proactor calls to pass handler's proxy
	  pointer, not the handler itself.

Wed Feb 16 07:02:15 2005  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_stdlib.inl:
        * ace/config-sunos5.7.h:
        * ace/config-sunos5.8.h:

          On SunOS 5.7, some wchar_t related methods are always in the std
          namespace when building with SunCC 5.3.

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:

          Added a ACE_TEST_WINDOW environment variable which can be used to
          start each process    in a separate window by setting it to
          something like 'rxvt -e' and ACE_TEST_VERBOSE which causes the
          command line of each process to be printed out as it is started.

        * examples/C++NPv2/C++NPv2.mpc:

          Added additional project ordering for the gnuace type to avoid
          build problems with parallel builds.

        * examples/Log_Msg/Log_Msg_MFC/Log_Msg_MFCDlg.cpp:

         Simple modifications to allow this to build with EVC 4.

        * include/makeinclude/platform_g++_common.GNU:

          Changed a grep command to something compatible with Solaris as
          well as Linux.

        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Set the default template instantiation mode to automatic for every
          version except SunCC 4.2.

Wed Feb 16 12:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace_rmcast.doxygen:
          Fixed typo in INPUT

Tue Feb 15 18:10:56 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/ace.m4:

          Removed ACE_ENABLE_RMCAST macro.  Building RMCast library is now
          unconditional.

Tue Feb 15 18:45:26 2005  Steve Huston  <shuston@riverace.com>

        * ace/POSIX_Asynch_IO.{h cpp}: